--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frederick MUHIRE</title>
 </head>
-<body>
-    <h1>FREDERICK MUHIRE</h1>
+<body style="background-color: aquamarine;">
+    <h1 style="color: blue;">FREDERICK MUHIRE</h1>
     <img src="./Assets/Passport Photo.jpg" />
     <p>
         E-mail: muhirefrederick@gmail.com<br />
@@ -184,5 +184,8 @@
           <h3>Interest</h3>  
           <p>Reading news and blogs about Businesses, IT&AI and climate changes, Piano workouts,
         </p>    
+<hr>
+<h6 style="text-align: center;">--End--</h6><br>
+        
         </body>
 </html>
